# my_robot

./: CMakeLists.txt  package.xml
config/: view_robot.rviz
launch/: display.launch.py  sim.launch.py  view_robot.launch.py
urdf/: gazebo_control.xacro  my_robot.urdf.xacro
